# MedAssist-AI

./: README.md  main.py  pyproject.toml  requirements.txt
backend/: main.py  model.py
backend/rag/: data_ingestion.py  data_retrieval.py
backend/src/: data_loader.py
notebook/: medical_chatbot.ipynb
